--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=userRest
-spring.datasource.url=jdbc:mysql://localhost:3306/mss_user
+spring.datasource.url=jdbc:mysql://3.17.13.120:3306/mss_user
 spring.datasource.username=useraldis
 spring.datasource.password=passAldis
 spring.jpa.hibernate.ddl-auto=update
 server.port=8084
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-spring.security.user.name=admin
-spring.security.user.password=admin
 
 
 
